Improve editor behaviour like text/images pasting

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -47,5 +47,6 @@
     <script src="./assets/js/renderer.js"></script>
     <script src="./assets/js/titleBar.js"></script>
     <script src="./assets/js/sideBar.js"></script>
+    <script src="./assets/js/editor.js"></script>
 </body>
 </html>
