--- a/src/static/index.html
+++ b/src/static/index.html
@@ -41,7 +41,7 @@
     <div id="editor" contenteditable>
     
     </div>
-    <h1 class="editorTitle" contenteditable>Tytuł notatki</h1>
+    <h1 id="noteTitle" contenteditable>Tytuł notatki</h1>
 
 
     <script src="./assets/js/renderer.js"></script>
