--- a/src/static/index.html
+++ b/src/static/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="./assets/css/fonts.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
 
     <script src="./lib/jquery.min.js"></script>
     <script src="./lib/anime.min.js"></script>
