--- a/src/static/documents-folder-missing-dialogue.html
+++ b/src/static/documents-folder-missing-dialogue.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1>Brevity couldn't find your "documents" folder.</h1>
-    <p>It's required for Brevity to operate. It's where it stores your notes. This is a list of the folders we found in your home directory. Please select the documents folder.</p>
+    <p>It's required for Brevity to operate and it's where your notes are stored. You need to manually select the preferred "documents" folder.</p>
     <button onclick="openFolderPicker()">Open folder picker</button>
 
     <script src="./assets/js/documents-folder-missing-dialogue.js"></script>
