--- a/src/static/documents-folder-missing-dialogue.html
+++ b/src/static/documents-folder-missing-dialogue.html
@@ -18,7 +18,7 @@
 <body>
     <h1>Brevity couldn't find your "documents" folder.</h1>
     <p>It's required for Brevity to operate and it's where your notes are stored. You need to manually select the preferred "documents" folder.</p>
-    <button onclick="openFolderPicker()">Open folder picker</button>
+    <button onclick="window.api.invoke('set-documents-directory')">Open folder picker</button>
 
     <script src="./assets/js/documents-folder-missing-dialogue.js"></script>
 </body>
