--- a/src/static/index.html
+++ b/src/static/index.html
@@ -56,5 +56,7 @@
     <script src="./assets/js/titleBar.js"></script>
     <script src="./assets/js/sideBar.js"></script>
     <script src="./assets/js/editor.js"></script>
+
+    <script src="./assets/js/keyShortcuts.js"></script>
 </body>
 </html>
